# umcm

./: README.md
umcm_client/: client_helper.cpp  client_helper.hpp  indicators_model.cpp  indicators_model.hpp  main.cpp  socket_client.cpp  socket_client.hpp  umcm_client.pro
umcm_client/qml/: AppWindow.qml  IndicatorCard.qml  Sidebar.qml  qml.qrc
umcm_client/qml/custom/: CustomBaseItem.qml  CustomButton.qml  CustomCircleMask.qml  CustomDivider.qml  CustomDropdown.qml  CustomIcon.qml  CustomInk.qml  CustomLabel.qml  CustomMenuField.qml  CustomOverlayLayer.qml  CustomPopupBase.qml  CustomScrollIndicator.qml  CustomSidebar.qml  CustomStandardItem.qml  CustomView.qml  components.qrc
umcm_client/qml/icons/: icons.qrc
umcm_server/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  socket_server.cpp  socket_server.hpp  utilities.hpp
